Remove --enable-preview options